// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.ui;

option go_package = "chromiumos/tast/services/cros/ui";

import "google/protobuf/empty.proto";

// ConferenceService provides RPC methods to run conference-related operations
service ConferenceService {
  rpc RunGoogleMeetScenario(MeetScenarioRequest) returns (google.protobuf.Empty);
  rpc RunZoomScenario(MeetScenarioRequest) returns (google.protobuf.Empty);
}

message MeetScenarioRequest {
  string tier = 1;
  int64 room_size = 2;
  bool extended_display = 3;
  string camera_video_path = 4;
  bool isLacros = 5;
}